BackDrop z-index fix

--- a/src/assets/styles/cmps/_StationEdit.scss
+++ b/src/assets/styles/cmps/_StationEdit.scss
@@ -3,8 +3,7 @@
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-
-
+    z-index: 3;
     background-color: #282828;
     border-radius: 0.5rem;
 
